fix text remove unused files

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		</section>
 		<section id="stats">
 			<h2>Experience in Numbers</h2>
-			<p>Over the yeards, I've been involved in more than 450 digital projects. Here are some quick stats on my roles for those projects.</p>
+			<p>Over the years, I've been involved in more than 450 digital projects. Here are some quick stats on my roles on these projects.</p>
 			<ul>
 				<li>
 					<h5>
@@ -117,7 +117,7 @@
 					<h5>
 						<img src="images/logos/php.png" width="2048" height="2048" alt="Php">
 						As PHP Back-end Engineer
-						<big>100+</big>
+						<big>80+</big>
 						projects
 					</h5>
 				</li>
@@ -133,7 +133,7 @@
 					<h5>
 						<img src="images/logos/html.png" width="1200" height="1200" alt="Html">
 						As Project Manager
-						<big>200+</big>
+						<big>150+</big>
 						projects
 					</h5>
 				</li>
