designing and adding svg icons for stats sections

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" type="text/css"/>
 		<link rel="stylesheet" href="stylesheets/animate.css" type="text/css"/>
 		<link rel="stylesheet" href="stylesheets/default.css" type="text/css"/>
+		<link rel="stylesheet" href="stylesheets/icons.css" type="text/css"/>
     </head>
     <body>
 		<!-- Of course you gotta check out my semantics! -->
@@ -106,36 +107,28 @@
 			<p>Over the years, I've been involved in more than 450 digital projects. Here are some quick stats on my roles on these projects.</p>
 			<ul>
 				<li>
-					<h5>
-						<img src="images/logos/ruby.png" width="512" height="512" alt="Ruby">
-						As Rails Back-end Engineer
-						<big>30+</big>
-						projects
-					</h5>
+					<i class="icon-rubydiamond"></i>
+					As <strong>Rails Back-end Engineer</strong>
+					<big>30+</big>
+					<small>projects</small>
 				</li>
 				<li>
-					<h5>
-						<img src="images/logos/php.png" width="2048" height="2048" alt="Php">
-						As PHP Back-end Engineer
-						<big>80+</big>
-						projects
-					</h5>
+					<i class="icon-phpoval"></i>
+					As <strong>PHP Back-end Engineer</strong>
+					<big>80+</big>
+					<small>projects</small>
 				</li>
 				<li>
-					<h5>
-						<img src="images/logos/html.png" width="1200" height="1200" alt="Html">
-						As Front-End Engineer
-						<big>150+</big>
-						projects
-					</h5>
+					<i class="icon-frontendscreen"></i>
+					As <strong>Front-End Engineer</strong>
+					<big>150+</big>
+					<small>projects</small>
 				</li>
 				<li>
-					<h5>
-						<img src="images/logos/html.png" width="1200" height="1200" alt="Html">
-						As Project Manager
-						<big>150+</big>
-						projects
-					</h5>
+					<i class="icon-cloudpm"></i>
+					As <strong>Project Manager</strong>
+					<big>150+</big>
+					<small>projects</small>
 				</li>
 			</ul>
 		</section>
