adding breadcrum side navigation, working on svg icons + logo image for the currently working on project

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
 		<!-- Of course you gotta check out my semantics! -->
-		<header class="flexbox">
+		<header id="intro" class="flexbox">
 			<div class="intro col">
 				<h1>
 					Philipe <s>Tauk</s> Casarotte
@@ -56,7 +56,7 @@
 					<a href="https://instagram.com/explore/tags/workingonbeckmen/">#workingonbeckmen</a>
 				</h2>
 				<!--TO-DO add beckmen tree logo -->
-				<img src="images/logos/beckmen-vineyards.png" width="94" height="78" alt="Beckmen Vineyards"/>
+				<img src="images/logos/beckmen-vineyards-logo.png" width="94" height="78" alt="Beckmen Vineyards"/>
 				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards' website and wine club. You can follow our work by clicking on the Instagram hashtag above.</p>
 			</div>
 		</section>
@@ -203,6 +203,15 @@
 			<a href="mailto:philipe@casarotte.com?Subject=Hey Phil!(ipe)">philipe [at] casarotte [dot] com</a>
 			<address>Santa Monica, CA</address>
 		</footer>
+		
+		<nav class="breadcrumb">
+			<a href="#intro" rel="#intro">Intro</a>
+			<a href="#bio" rel="#bio">Bio</a>
+			<a href="#recent-work" rel="#recent-work">Working On</a>
+			<a href="#work" rel="#work">Selected Projects</a>
+			<a href="#stats" rel="#stats">Experience</a>
+			<a href="#personal" rel="#personal">Preferences</a>			
+		</nav>
 		
 		<!-- Drummer & Coder, I may miss a comma, but never the beat. -->
 		
