--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				</li>
 				<li>
 					<a href="http://www.zenartsla.com">
-						<h4>ZenArts LA</h4>
+						<h4>ZenArts LA <small>8 awards</small></h4>
 						<figure>
 							<img src="images/featured-projects/zen-arts-la.jpg" alt="Zen Arts LA" width="16" height="9"/>
 							<img src="images/featured-projects/zen-arts-la-logo.jpg" alt="Zen Arts LA - Logo" width="16" height="9" class="replace"/>							
