finished stats section with final icons, added breadcrumb side navigation functionality

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="intro col">
 				<h1>
 					Philipe <s>Tauk</s> Casarotte
-					<small>is <a href="http://www.dburnsdesign.com/about-us">DBurns CTO &amp; Product Manager</a>.</small>
+					<small>is <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
 				</h1>
 				<p>He has strong experience in web development, client relations and digital strategy. He is a coder.</p>
 				<button rel="#bio">FULL BIO &raquo;</button>
@@ -56,7 +56,7 @@
 					<a href="https://instagram.com/explore/tags/workingonbeckmen/">#workingonbeckmen</a>
 				</h2>
 				<!--TO-DO add beckmen tree logo -->
-				<img src="images/logos/beckmen-vineyards-logo.png" width="94" height="78" alt="Beckmen Vineyards"/>
+				<a href="http://www.beckmenvineyards.com"><img src="images/logos/beckmen-vineyards-logo.png" width="94" height="78" alt="Beckmen Vineyards"/></a>
 				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards' website and wine club. You can follow our work by clicking on the Instagram hashtag above.</p>
 			</div>
 		</section>
@@ -133,62 +133,76 @@
 			</ul>
 		</section>
 		<section id="personal">
-			<h2>Personal &amp; Preferences</h2>
+			<h2>Personal &amp; Tools Preferences</h2>
 			<ul>
 				<li class="drums">
 					<a href="http://www.cbf.com.br">
 						<strong>Drums</strong>
 						<hr/>
-						Air Druming since 1985. 
+						<small>Air Druming since 1985.</small> 
 					</a>
 				</li>
 				<li class="soccer">
 					<a href="http://www.cbf.com.br">
 						<strong>Futebol</strong>
 						<hr/>
-						Football, Futebol, Futball, ok, ok, soccer.
+						<small>Football, Futebol, Futball, ok, ok, soccer.</small>
 					</a>
 				</li>
 				<li class="drums">
 					<a href="http://www.cbf.com.br">
 						<strong>Chocolate</strong>
 						<hr/>
-						Chocolate, enough said. 
+						<small>Chocolate, enough said.</small>
 					</a>
 				</li>
 				<li class="philz-coffee">
 					<a href="http://www.evernote.com">
 						<strong>Philz Coffee</strong>
 						<hr/>
-						Philz Coffee for an outstanding sip.
+						<small>Philz Coffee for an outstanding sip.</small>
+					</a>
+				</li>
+				<li class="what">
+					<a href="http://www.textmate.com">
+						<strong>What?</strong>
+						<hr/>
+						<small>Wow wow wow</small>
 					</a>
 				</li>
 				<li class="evernote">
 					<a href="http://www.evernote.com">
 						<strong>Evernote</strong>
 						<hr/>
-						Evernote for every note.
+						<small>Evernote for every note.</small>
 					</a>
 				</li>
 				<li class="pomodoro">
 					<a href="http://www.pomodorotechnique.com">
-						<strong>Pomodoro Technique</strong>
+						<strong>Pomodoro</strong>
 						<hr/>
-						Pomodoro Techninique for a prouctive day.
+						<small>Pomodoro Techninique for a prouctive day.</small>
 					</a>
 				</li>
 				<li class="terminal">
 					<a href="http://www.textmate.com">
 						<strong>Terminal</strong>
 						<hr/>
-						Terminal, agility and feeling hacky.
+						<small>Terminal, agility and feeling hacky.</small>
 					</a>
 				</li>
 				<li class="textmate">
 					<a href="http://www.textmate.com">
 						<strong>Textmate</strong>
 						<hr/>
-						Textmate, my code buddy. Pair programming so do speak.
+						<small>My pair programming mate.</small>
+					</a>
+				</li>
+				<li class="what">
+					<a href="http://www.textmate.com">
+						<strong>What</strong>
+						<hr/>
+						<small>ok.</small>
 					</a>
 				</li>
 			</ul>
@@ -205,12 +219,12 @@
 		</footer>
 		
 		<nav class="breadcrumb">
-			<a href="#intro" rel="#intro">Intro</a>
-			<a href="#bio" rel="#bio">Bio</a>
-			<a href="#recent-work" rel="#recent-work">Working On</a>
-			<a href="#work" rel="#work">Selected Projects</a>
-			<a href="#stats" rel="#stats">Experience</a>
-			<a href="#personal" rel="#personal">Preferences</a>			
+			<a href="#intro" rel="#intro" class="selected"><span>Intro</span></a>
+			<a href="#bio" rel="#bio"><span>Bio</span></a>
+			<a href="#recent-work" rel="#recent-work"><span>Working On</span></a>
+			<a href="#work" rel="#work"><span>Selected Projects</span></a>
+			<a href="#stats" rel="#stats"><span>Experience</span></a>
+			<a href="#personal" rel="#personal"><span>Preferences</span></a>			
 		</nav>
 		
 		<!-- Drummer & Coder, I may miss a comma, but never the beat. -->
