--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Philipe Casarotte — Creative Full Stack Programmer, Software Engineer, Product Manager</title>
+        <title>Philipe Casarotte — Creative Full Stack Programmer, Product and Project Manager</title>
 		<meta name="description" content="Philipe is DBurns CTO &amp; Product Manager. Strong experience in web development, client relations and digital strategy. He is a coder."/>
 		<meta name="keywords" content="coder, developer, product manager, digital professional, devops"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		
-		<link rel="icon" type="image/png" href="imgs/favicon.png"/>
+		<link href="imgs/favicon.png" rel="icon" type="image/png" />
+		
 		<link href="http://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Open+Sans+Condensed:300,300italic,700|Yanone+Kaffeesatz:400,300,700|Amatic+SC:400,700' rel='stylesheet' type='text/css'/>
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" type="text/css"/>
-		<link rel="stylesheet" href="stylesheets/animate.css" type="text/css"/>
-		<link rel="stylesheet" href="stylesheets/default.css" type="text/css"/>
-		<link rel="stylesheet" href="stylesheets/icons.css" type="text/css"/>
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+		<link href="stylesheets/animate.css" rel="stylesheet" type="text/css"/>
+		<link href="stylesheets/default.css" rel="stylesheet" type="text/css"/>
+		<link href="stylesheets/icons.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
 		<!-- Of course you gotta check out my semantics! -->
@@ -144,23 +145,23 @@
 				</li>
 				<li class="soccer">
 					<a href="http://www.cbf.com.br">
-						<strong>Futebol</strong>
+						<strong>Futball</strong>
 						<hr/>
-						<small>Football, Futebol, Futball, ok, ok, soccer.</small>
+						<small>Futball?! Ok, soccer.</small>
 					</a>
 				</li>
 				<li class="drums">
 					<a href="http://www.cbf.com.br">
 						<strong>Chocolate</strong>
 						<hr/>
-						<small>Chocolate, enough said.</small>
+						<small>Enough said.</small>
 					</a>
 				</li>
 				<li class="philz-coffee">
 					<a href="http://www.evernote.com">
 						<strong>Philz Coffee</strong>
 						<hr/>
-						<small>Philz Coffee for an outstanding sip.</small>
+						<small>Outstanding sips.</small>
 					</a>
 				</li>
 				<li class="what">
@@ -174,35 +175,35 @@
 					<a href="http://www.evernote.com">
 						<strong>Evernote</strong>
 						<hr/>
-						<small>Evernote for every note.</small>
+						<small>For every note.</small>
 					</a>
 				</li>
 				<li class="pomodoro">
 					<a href="http://www.pomodorotechnique.com">
 						<strong>Pomodoro</strong>
 						<hr/>
-						<small>Pomodoro Techninique for a prouctive day.</small>
+						<small>For a productive day.</small>
 					</a>
 				</li>
 				<li class="terminal">
 					<a href="http://www.textmate.com">
 						<strong>Terminal</strong>
 						<hr/>
-						<small>Terminal, agility and feeling hacky.</small>
+						<small>For agility and hacky feelings.</small>
 					</a>
 				</li>
 				<li class="textmate">
 					<a href="http://www.textmate.com">
 						<strong>Textmate</strong>
 						<hr/>
-						<small>My pair programming mate.</small>
+						<small>For coding with ease.</small>
 					</a>
 				</li>
 				<li class="what">
 					<a href="http://www.textmate.com">
-						<strong>What</strong>
+						<strong>Axure</strong>
 						<hr/>
-						<small>ok.</small>
+						<small>For prototyping. #arquictectfeelings</small>
 					</a>
 				</li>
 			</ul>
