changes in the css for last section

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				</li>
 				<li class="what">
 					<a href="http://www.textmate.com">
-						<strong>What?</strong>
+						<strong>dadadsada</strong>
 						<hr/>
 						<small>Wow wow wow</small>
 					</a>
