add media queries

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Philipe Casarotte — Creative Full Stack Programmer, Product and Project Manager</title>
 		<meta name="description" content="Philipe is DBurns CTO &amp; Product Manager. Strong experience in web development, client relations and digital strategy. He is a coder."/>
 		<meta name="keywords" content="coder, developer, product manager, digital professional, devops"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		
 		<link href="imgs/favicon.png" rel="icon" type="image/png" />
@@ -145,7 +145,7 @@
 				</li>
 				<li class="soccer">
 					<a href="http://www.cbf.com.br">
-						<strong>Futball</strong>
+						<strong>Football</strong>
 						<hr/>
 						<small>Futball?! Ok, soccer.</small>
 					</a>
@@ -175,7 +175,10 @@
 					<a href="http://www.evernote.com">
 						<strong>Evernote</strong>
 						<hr/>
-						<small>For every note.</small>
+						<small>
+							For every note.
+							<img src="images/softwares-techniques/evernote.png" width="50" height="50" alt="Evernote">
+						</small>
 					</a>
 				</li>
 				<li class="pomodoro">
