adding perosnal css and image placholders

--- a/index.html
+++ b/index.html
@@ -177,7 +177,6 @@
 						<hr/>
 						<small>
 							For every note.
-							<img src="images/softwares-techniques/evernote.png" width="50" height="50" alt="Evernote">
 						</small>
 					</a>
 				</li>
@@ -202,7 +201,7 @@
 						<small>For coding with ease.</small>
 					</a>
 				</li>
-				<li class="what">
+				<li class="axure">
 					<a href="http://www.textmate.com">
 						<strong>Axure</strong>
 						<hr/>
