--- a/index.html
+++ b/index.html
@@ -44,19 +44,17 @@
 				<p>Previously, Philipe worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company and as a Graphic Designer then Software Engineer for one of Brazil's biggest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, he helped one of its internal agencies to develop automation software that was later sold to renown Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
 				<h3>Extras</h3>
 				<p>Philipe has also taught Web Design Courses for 2 universities, <a href="http://www.sp.senac.br/"  hreflang="pt-BR">SENAC-SP</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">FASM-SP</a>. His work has won recognition from Webby and W3 Awards. He holds a B.A. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">PUC-SP</a>.</p>
-				<!-- Philipe is a creative full stack developer that loves Ruby, Javascript and a semantic-driven HTML. -->
 			</div>
 		</section>
 		<section id="recent-work">
-			<!-- TO-DO: Shot video in eagle angle, showing me typing away and doing some work, add full background cover so it fits the width/height of the parent div-->
-			<!-- <iframe id="video" src="http://player.vimeo.com/video/121649600?autoplay=1&amp;api=1&amp;loop=1&amp;title=0&amp;player_id=0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe> -->
-			<!-- TO-DO: Shot intagram videos, pull instagram videos by hashtag used form my account, every project will have a series of short videos that will cycle through in the website-->
-			<div>
+			<!-- TO-DO: Shut video in eagle angle, showing me typing away and doing some work, add full background cover so it fits the width/height of the parent div -->
+			<!-- TO-DO: Shut photos for each step of the project -->
+			<!-- TO-DO: Post Tweeter Images showing process -->
+			<div>	
 				<h2>
 					I'm Currently<br/>
 					<a href="https://instagram.com/explore/tags/workingonbeckmen/">#workingonbeckmen</a>
 				</h2>
-				<!--TO-DO add beckmen tree logo -->
 				<a href="http://www.beckmenvineyards.com"><img src="images/logos/beckmen-vineyards-logo.png" width="94" height="78" alt="Beckmen Vineyards"/></a>
 				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards' website and wine club. You can follow our work by clicking on the Instagram hashtag above.</p>
 			</div>
@@ -164,11 +162,11 @@
 						<small>Outstanding sips.</small>
 					</a>
 				</li>
-				<li class="what">
+				<li class="italy">
 					<a href="http://www.textmate.com">
-						<strong>dadadsada</strong>
+						<strong>Italian Food</strong>
 						<hr/>
-						<small>Wow wow wow</small>
+						<small>Pasta is good.</small>
 					</a>
 				</li>
 				<li class="evernote">
@@ -231,7 +229,7 @@
 		</nav>
 		
 		<!-- Drummer & Coder, I may miss a comma, but never the beat. -->
-		
+		 
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 		 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.1/angular.min.js" type="text/javascript"></script>
 		 <script src="javascripts/instagram-app.js" type="text/javascript"></script>
