change text from 3rd to first person

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<div class="intro col">
 				<h1>
 					Philipe <s>Tauk</s> Casarotte
-					<small>is <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
+					<small>I'm <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
 				</h1>
-				<p>He has strong experience in web development, client relations and digital strategy. He is a coder.</p>
+				<p>I've experience in web development, client relations and digital strategy. I'm a programmer.</p>
 				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
 					<i class="fa fa-angle-down"></i>
@@ -37,13 +37,13 @@
 			</div>
 		</header>
 		<section id="bio">
-			<p class="intro"><big><strong>Bio:</strong> As CTO, Product and Project Manager at DBurns, Philipe guides clients in their efforts to create a strategy and roll out plan for their products and services.</big></p>
+			<p class="intro"><big><strong>Bio:</strong> As CTO, Product and Project Manager at DBurns, I guide clients in their efforts to create a strategy and roll out plan for their products and services.</big></p>
 			<div>
-				<p>For the last eight plus years at DBurns, Philipe has exercised roles in client relations, project management, front and back end development, UX/UI and digital strategy. Philipe Casarotte has experience leading multi-disciplinary teams and have a diversificate, yet profound technical knowledge which allows him to quickly connect with team members and clients.</p>
+				<p>For the last eight plus years at DBurns, I've exercised roles in client relations, project management, front and back end development, UX/UI and digital strategy. I have experience leading multi-disciplinary teams and have a diversificate, yet profound technical knowledge which allows me to quickly connect with team members and clients.</p>
 				<h3>Previous Experiences</h3>
-				<p>Previously, Philipe worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company and as a Graphic Designer then Software Engineer for one of Brazil's biggest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, he helped one of its internal agencies to develop automation software that was later sold to renown Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
+				<p>Previously, I worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company and as a Graphic Designer then Software Engineer for one of Brazil's biggest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, I helped one of its internal agencies to develop automation software that was later sold to renown Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
 				<h3>Extras</h3>
-				<p>Philipe has also taught Web Design Courses for 2 universities, <a href="http://www.sp.senac.br/"  hreflang="pt-BR">SENAC-SP</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">FASM-SP</a>. His work has won recognition from Webby and W3 Awards. He holds a B.A. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">PUC-SP</a>.</p>
+				<p>I have also taught Web Design Courses for 2 universities, <a href="http://www.sp.senac.br/"  hreflang="pt-BR">SENAC-SP</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">FASM-SP</a>. My work has won recognition from Webby and W3 Awards. I also hold a B.A. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">PUC-SP</a>.</p>
 			</div>
 		</section>
 		<section id="recent-work">
