gogole domain validation meta tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<meta name="keywords" content="coder, developer, product manager, digital professional, devops"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+
+		<meta name="google-site-verification" content="ANVUBZR6hwp1i3j3r2u4XSqTuNszs9lhd3MFlrh5lG0" />
 		
 		<link href="imgs/favicon.png" rel="icon" type="image/png" />
 		
