fix text and css for iphone on stats section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					Philipe <s>Tauk</s> Casarotte
 					<small>I'm <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
 				</h1>
-				<p>I've experience in web development, client relations and digital strategy. I'm a programmer.</p>
+				<p>Web development, client relations and digital strategy. I'm a programmer.</p>
 				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
 					<i class="fa fa-angle-down"></i>
@@ -39,9 +39,9 @@
 		<section id="bio">
 			<p class="intro"><big><strong>Bio:</strong> As CTO, Product and Project Manager at DBurns, I guide clients in their efforts to create a strategy and roll out plan for their products and services.</big></p>
 			<div>
-				<p>For the last eight plus years at DBurns, I've exercised roles in client relations, project management, front and back end development, UX/UI and digital strategy. I have experience leading multi-disciplinary teams and have a diversificate, yet profound technical knowledge which allows me to quickly connect with team members and clients.</p>
+				<p>For the last eight plus years at DBurns, I have exercised roles in client relations, project management, front and back end development, UX/UI and digital strategy. I have experience leading multi-disciplinary teams and have a diversificate, yet profound technical knowledge which allows me to quickly connect with team members and clients.</p>
 				<h3>Previous Experiences</h3>
-				<p>Previously, I worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company and as a Graphic Designer then Software Engineer for one of Brazil's biggest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, I helped one of its internal agencies to develop automation software that was later sold to renown Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
+				<p>Previously, I have worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company and as a Graphic Designer then Software Engineer for one of Brazil's biggest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, I helped one of its internal agencies to develop automation software that was later sold to renown Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
 				<h3>Extras</h3>
 				<p>I have also taught Web Design Courses for 2 universities, <a href="http://www.sp.senac.br/"  hreflang="pt-BR">SENAC-SP</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">FASM-SP</a>. My work has won recognition from Webby and W3 Awards. I also hold a B.A. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">PUC-SP</a>.</p>
 			</div>
@@ -53,10 +53,10 @@
 			<div>	
 				<h2>
 					I'm Currently<br/>
-					<a href="https://instagram.com/explore/tags/workingonbeckmen/">#workingonbeckmen</a>
+					<a href="https://twitter.com/hashtag/workingonbeckmen">#workingonbeckmen</a>
 				</h2>
 				<a href="http://www.beckmenvineyards.com"><img src="images/logos/beckmen-vineyards-logo.png" width="94" height="78" alt="Beckmen Vineyards"/></a>
-				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards' website and wine club. You can follow our work by clicking on the Instagram hashtag above.</p>
+				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards' website and wine club. You can follow our work by clicking on the hashtag above.</p>
 			</div>
 		</section>
 		<section id="work">
@@ -94,7 +94,7 @@
 							<img src="images/featured-projects/zen-arts-la.jpg" alt="Zen Arts LA" width="16" height="9"/>
 							<img src="images/featured-projects/zen-arts-la-logo.jpg" alt="Zen Arts LA - Logo" width="16" height="9" class="replace"/>							
 							<figcaption>
-								Elegant and extravagant corporate event entertainment and production company.
+								Extravagant corporate event entertainment and production company.
 							</figcaption>
 						</figure>
 					</a>
@@ -103,7 +103,7 @@
 		</section>
 		<section id="stats">
 			<h2>Experience in Numbers</h2>
-			<p>Over the years, I've been involved in more than 450 digital projects. Here are some quick stats on my roles on these projects.</p>
+			<p>Over the years, I have been involved in more than 450 digital projects. Here are some quick stats on my roles on these projects.</p>
 			<ul>
 				<li>
 					<i class="icon-rubydiamond"></i>
@@ -138,14 +138,14 @@
 					<a href="http://www.cbf.com.br">
 						<strong>Drums</strong>
 						<hr/>
-						<small>Air Druming since 1985.</small> 
+						<small>Air + Actual drummer.</small> 
 					</a>
 				</li>
 				<li class="soccer">
 					<a href="http://www.cbf.com.br">
 						<strong>Football</strong>
 						<hr/>
-						<small>Futball?! Ok, soccer.</small>
+						<small>I love and play soccer.</small>
 					</a>
 				</li>
 				<li class="drums">
@@ -166,16 +166,14 @@
 					<a href="http://www.textmate.com">
 						<strong>Italian Food</strong>
 						<hr/>
-						<small>Pasta is good.</small>
+						<small>Classic. Never grows old.</small>
 					</a>
 				</li>
 				<li class="evernote">
 					<a href="http://www.evernote.com">
 						<strong>Evernote</strong>
 						<hr/>
-						<small>
-							For every note.
-						</small>
+						<small>My every note.</small>
 					</a>
 				</li>
 				<li class="pomodoro">
@@ -189,21 +187,21 @@
 					<a href="http://www.textmate.com">
 						<strong>Terminal</strong>
 						<hr/>
-						<small>For agility and hacky feelings.</small>
+						<small>For agility and hacker feelings.</small>
 					</a>
 				</li>
 				<li class="textmate">
 					<a href="http://www.textmate.com">
 						<strong>Textmate</strong>
 						<hr/>
-						<small>For coding with ease.</small>
+						<small>My XP buddy.</small>
 					</a>
 				</li>
 				<li class="axure">
 					<a href="http://www.textmate.com">
 						<strong>Axure</strong>
 						<hr/>
-						<small>For prototyping. #arquictectfeelings</small>
+						<small>Prototyping.</small>
 					</a>
 				</li>
 			</ul>
