--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8"/>
         <title>Philipe Casarotte — Creative Full Stack Programmer, Product and Project Manager</title>
-		<meta name="description" content="Philipe is DBurns CTO &amp; Product Manager. Strong experience in web development, client relations and digital strategy. He is a coder."/>
-		<meta name="keywords" content="coder, developer, product manager, digital professional, devops"/>
+		<meta name="description" content="Philipe is DBurns CTO &amp; Product Manager. He has experience in web development, client relations and digital strategy. He is a programmer."/>
+		<meta name="keywords" content="programmer, developer, product manager, digital professional, ruby, front-end"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+		<meta name="google-site-verification" content="_Ao4wv72VkOYnYgvu27J2vGEUOhSnDTXPq56_x9LZiM"/>
 		
 		<link href="imgs/favicon.png" rel="icon" type="image/png" />
 		
@@ -148,7 +149,7 @@
 						<small>I love and play soccer.</small>
 					</a>
 				</li>
-				<li class="drums">
+				<li class="chocolate">
 					<a href="http://www.cbf.com.br">
 						<strong>Chocolate</strong>
 						<hr/>
@@ -230,5 +231,15 @@
 		 
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 		 <script src="javascripts/default.js" type="text/javascript"></script>
+		 
+		 <script type="text/javascript">
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-63270429-1', 'auto');
+			ga('send', 'pageview');
+		 </script>
 	</body>
 </html>
