text editing + css fixes for mobile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					Philipe <s>Tauk</s> Casarotte
 					<small>I'm <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
 				</h1>
-				<p>Web development, client relations and digital strategy. I'm a programmer.</p>
+				<p>I have experience in web development, client relations and digital strategy. <strong>I'm a programmer.</strong></p>
 				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
 					<i class="fa fa-angle-down"></i>
@@ -90,7 +90,7 @@
 				</li>
 				<li>
 					<a href="http://www.zenartsla.com">
-						<h4>ZenArts LA <small>8 awards</small></h4>
+						<h4>ZenArts LA <small>Award Winner</small></h4>
 						<figure>
 							<img src="images/featured-projects/zen-arts-la.jpg" alt="Zen Arts LA" width="16" height="9"/>
 							<img src="images/featured-projects/zen-arts-la-logo.jpg" alt="Zen Arts LA - Logo" width="16" height="9" class="replace"/>							
@@ -139,7 +139,7 @@
 					<a href="http://www.cbf.com.br">
 						<strong>Drums</strong>
 						<hr/>
-						<small>Air + Actual drummer.</small> 
+						<small>Air + actual drummer.</small> 
 					</a>
 				</li>
 				<li class="soccer">
@@ -160,14 +160,14 @@
 					<a href="http://www.evernote.com">
 						<strong>Philz Coffee</strong>
 						<hr/>
-						<small>Outstanding sips.</small>
+						<small>Prefered coffee shop.</small>
 					</a>
 				</li>
 				<li class="italy">
 					<a href="http://www.textmate.com">
-						<strong>Italian Food</strong>
+						<strong>Maps</strong>
 						<hr/>
-						<small>Classic. Never grows old.</small>
+						<small>They always fascinate me.</small>
 					</a>
 				</li>
 				<li class="evernote">
@@ -188,7 +188,7 @@
 					<a href="http://www.textmate.com">
 						<strong>Terminal</strong>
 						<hr/>
-						<small>For agility and hacker feelings.</small>
+						<small>Agility and hacker feelings.</small>
 					</a>
 				</li>
 				<li class="textmate">
@@ -202,7 +202,7 @@
 					<a href="http://www.textmate.com">
 						<strong>Axure</strong>
 						<hr/>
-						<small>Prototyping.</small>
+						<small>For prototyping.</small>
 					</a>
 				</li>
 			</ul>
