uploding new images

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						<small>Prefered coffee shop.</small>
 					</a>
 				</li>
-				<li class="italy">
+				<li class="maps">
 					<a href="http://www.textmate.com">
 						<strong>Maps</strong>
 						<hr/>
@@ -195,7 +195,7 @@
 					<a href="http://www.textmate.com">
 						<strong>Textmate</strong>
 						<hr/>
-						<small>My XP buddy.</small>
+						<small>Prefered text editor.</small>
 					</a>
 				</li>
 				<li class="axure">
