fix images for personal tastes and prefered tools

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					<a href="http://www.evernote.com">
 						<strong>Philz Coffee</strong>
 						<hr/>
-						<small>Prefered coffee shop.</small>
+						<small>Favorite coffee shop.</small>
 					</a>
 				</li>
 				<li class="maps">
