--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link href="imgs/favicon.png" rel="icon" type="image/png" />
 		
 		<link href="http://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
-		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Open+Sans+Condensed:300,300italic,700|Yanone+Kaffeesatz:400,300,700|Amatic+SC:400,700' rel='stylesheet' type='text/css'/>
+		<link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Open+Sans+Condensed:300,300italic,700|Yanone+Kaffeesatz:400,300,700|Amatic+SC:400,700" rel="stylesheet" type="text/css"/>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 		<link href="stylesheets/animate.css" rel="stylesheet" type="text/css"/>
 		<link href="stylesheets/default.css" rel="stylesheet" type="text/css"/>
@@ -24,9 +24,9 @@
 			<div class="intro col">
 				<h1>
 					Philipe <s>Tauk</s> Casarotte
-					<small>I'm <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
+					<small>I"m <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
 				</h1>
-				<p>I have experience in web development, client relations and digital strategy. <strong>I'm a programmer.</strong></p>
+				<p>I have experience in web development, client relations and digital strategy. <strong>I"m a programmer.</strong></p>
 				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
 					<i class="fa fa-angle-down"></i>
@@ -42,7 +42,7 @@
 			<div>
 				<p>For the last eight plus years at DBurns, I have exercised roles in client relations, project management, front and back end development, UX/UI and digital strategy. I have experience leading multi-disciplinary teams and have a diversificate, yet profound technical knowledge which allows me to quickly connect with team members and clients.</p>
 				<h3>Previous Experiences</h3>
-				<p>Previously, I have worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company and as a Graphic Designer then Software Engineer for one of Brazil's biggest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, I helped one of its internal agencies to develop automation software that was later sold to renown Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
+				<p>Previously, I have worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company and as a Graphic Designer then Software Engineer for one of Brazil"s biggest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, I helped one of its internal agencies to develop automation software that was later sold to renown Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
 				<h3>Extras</h3>
 				<p>I have also taught Web Design Courses for 2 universities, <a href="http://www.sp.senac.br/"  hreflang="pt-BR">SENAC-SP</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">FASM-SP</a>. My work has won recognition from Webby and W3 Awards. I also hold a B.A. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">PUC-SP</a>.</p>
 			</div>
@@ -53,11 +53,11 @@
 			<!-- TO-DO: Post Tweeter Images showing process -->
 			<div>	
 				<h2>
-					I'm Currently<br/>
+					I"m Currently<br/>
 					<a href="https://twitter.com/hashtag/workingonbeckmen">#workingonbeckmen</a>
 				</h2>
 				<a href="http://www.beckmenvineyards.com"><img src="images/logos/beckmen-vineyards-logo.png" width="94" height="78" alt="Beckmen Vineyards"/></a>
-				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards' website and wine club. You can follow our work by clicking on the hashtag above.</p>
+				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards" website and wine club. You can follow our work by clicking on the hashtag above.</p>
 			</div>
 		</section>
 		<section id="work">
@@ -233,13 +233,14 @@
 		 <script src="javascripts/default.js" type="text/javascript"></script>
 		 
 		 <script type="text/javascript">
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			})(window,document,"script","//www.google-analytics.com/analytics.js","ga");
 
-			ga('create', 'UA-63270429-1', 'auto');
-			ga('send', 'pageview');
+			ga("create", "UA-63270429-1", "auto");
+			ga("send", "pageview");
+			ga("require", "displayfeatures");
 		 </script>
 	</body>
 </html>
