--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			<div class="intro col">
 				<h1>
 					Philipe <s>Tauk</s> Casarotte
-					<small>I"m <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
+					<small>I'm <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
 				</h1>
-				<p>I have experience in web development, client relations and digital strategy. <strong>I"m a programmer.</strong></p>
+				<p>I have experience in web development, client relations and digital strategy. <strong>I'm a programmer.</strong></p>
 				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
 					<i class="fa fa-angle-down"></i>
@@ -53,11 +53,11 @@
 			<!-- TO-DO: Post Tweeter Images showing process -->
 			<div>	
 				<h2>
-					I"m Currently<br/>
+					I'm Currently<br/>
 					<a href="https://twitter.com/hashtag/workingonbeckmen">#workingonbeckmen</a>
 				</h2>
 				<a href="http://www.beckmenvineyards.com"><img src="images/logos/beckmen-vineyards-logo.png" width="94" height="78" alt="Beckmen Vineyards"/></a>
-				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards" website and wine club. You can follow our work by clicking on the hashtag above.</p>
+				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards' website and wine club. You can follow our work by clicking on the hashtag above.</p>
 			</div>
 		</section>
 		<section id="work">
