--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 			<div class="intro col">
 				<h1>
 					Philipe <s>Tauk</s> Casarotte
-					<small>I'm <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns CTO &amp; Product Manager</a>.</small>
+					<small>CTO &amp; Product Manager for <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns</a>.</small>
 				</h1>
-				<p>I have experience in web development, client relations and digital strategy. <strong>I'm a programmer.</strong></p>
+				<!-- <p>I have experience in web development, client relations and digital strategy. <strong>I'm a programmer.</strong></p> -->
+				<p>I'm an experienced technology professional and programmer, focused on custom web development, but I can also handle the client side of things. I'm savvy in all aspects of agency business, including digital marketing and account management.</p>
 				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
 					<i class="fa fa-angle-down"></i>
@@ -38,13 +39,13 @@
 			</div>
 		</header>
 		<section id="bio">
-			<p class="intro"><big><strong>Bio:</strong> As CTO, Product and Project Manager at DBurns, I guide clients in their efforts to create a strategy and roll out plan for their products and services.</big></p>
+			<p class="intro"><big><strong>Bio:</strong> As a technology leader, I guide clients in all aspects of their web development project. I craft the initial strategy and scope. Then I manage the project as it rolls through development. I strategize end-to-end launch plans for my clients' products and services.</big></p>
 			<div>
-				<p>For the last eight plus years at DBurns, I have exercised roles in client relations, project management, front and back end development, UX/UI and digital strategy. I have experience leading multi-disciplinary teams and have a diversificate, yet profound technical knowledge which allows me to quickly connect with team members and clients.</p>
+				<p>My diverse background includes roles in client relations, project management, front- and back-end development, UX/UI and digital strategy. I enjoy leading teams and collaborating with people from all disciplines to make intensely creative, cutting-edge websites. My ability to deeply understand the technical aspects of web development as well as the business and marketing facets allows me to quickly connect with other team members and clients.</p>
 				<h3>Previous Experiences</h3>
-				<p>Previously, I have worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company and as a Graphic Designer then Software Engineer for one of Brazil"s biggest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, I helped one of its internal agencies to develop automation software that was later sold to renown Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
-				<h3>Extras</h3>
-				<p>I have also taught Web Design Courses for 2 universities, <a href="http://www.sp.senac.br/"  hreflang="pt-BR">SENAC-SP</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">FASM-SP</a>. My work has won recognition from Webby and W3 Awards. I also hold a B.A. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">PUC-SP</a>.</p>
+				<p>I've previously worked as an IT analyst at <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company. I was also a graphic designer and software engineer for one of Brazil's largest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a>, “the “Estadao”. There, I helped to develop an automation software which was later sold to top-tier Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
+				<h3>Education and Awards</h3>
+				<p>I've taught web design for two universities,  <a href="http://www.sp.senac.br/"  hreflang="pt-BR">SENAC-SP</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">FASM-SP</a>, and I'm honored that my work has won Webby and W3 awards. I hold a B.A. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">PUC-SP</a>.</p>
 			</div>
 		</section>
 		<section id="recent-work">
@@ -57,7 +58,7 @@
 					<a href="https://twitter.com/hashtag/workingonbeckmen">#workingonbeckmen</a>
 				</h2>
 				<a href="http://www.beckmenvineyards.com"><img src="images/logos/beckmen-vineyards-logo.png" width="94" height="78" alt="Beckmen Vineyards"/></a>
-				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards' website and wine club. You can follow our work by clicking on the hashtag above.</p>
+				<p>A complete rebranding of Beckmen Vineyards' website and wine club.</p>
 			</div>
 		</section>
 		<section id="work">
@@ -103,8 +104,8 @@
 			</ul>
 		</section>
 		<section id="stats">
-			<h2>Experience in Numbers</h2>
-			<p>Over the years, I have been involved in more than 450 digital projects. Here are some quick stats on my roles on these projects.</p>
+			<h2>Experience by the Number</h2>
+			<p>I've been involved in more than 450 projects in various roles. Here's a few fun stats on my roles in these projects throughout the years.</p>
 			<ul>
 				<li>
 					<i class="icon-rubydiamond"></i>
@@ -133,7 +134,7 @@
 			</ul>
 		</section>
 		<section id="personal">
-			<h2>Personal &amp; Tools Preferences</h2>
+			<h2>Personal Favorites</h2>
 			<ul>
 				<li class="drums">
 					<a href="http://www.cbf.com.br">
@@ -208,6 +209,7 @@
 			</ul>
 		</section>
 		<footer>
+			<h2>Get in touch.</h2>
 			<nav>
 				<a href="https://www.linkedin.com/in/philipecasarotte" class="fa fa-linkedin"></a>
 				<a href="https://twitter.com/philipetauk" class="fa fa-twitter"></a>
